--- a/final.ipynb
+++ b/final.ipynb
@@ -2724,7 +2724,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "down_model = downsample(3, 4)\n",
+        "down_result = down_model(tf.expand_dims(inp, 0))\n",
+        "print (down_result.shape)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2737,7 +2739,170 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def upsample(filters, size, apply_dropout=False):\n",
+        "  initializer = tf.random_normal_initializer(0., 0.02)\n",
+        "\n",
+        "  result = tf.keras.Sequential()\n",
+        "  result.add(\n",
+        "    tf.keras.layers.Conv2DTranspose(filters, size, strides=2,\n",
+        "                                    padding='same',\n",
+        "                                    kernel_initializer=initializer,\n",
+        "                                    use_bias=False))\n",
+        "\n",
+        "  result.add(tf.keras.layers.BatchNormalization())\n",
+        "\n",
+        "  if apply_dropout:\n",
+        "      result.add(tf.keras.layers.Dropout(0.5))\n",
+        "\n",
+        "  result.add(tf.keras.layers.ReLU())\n",
+        "\n",
+        "  return result"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jt7NqzMBg-XP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def Generator():\n",
+        "  down_stack = [\n",
+        "    downsample(64, 4, apply_batchnorm=False), # (bs, 128, 128, 64)\n",
+        "    downsample(128, 4), # (bs, 64, 64, 128)\n",
+        "    downsample(256, 4), # (bs, 32, 32, 256)\n",
+        "    downsample(512, 4), # (bs, 16, 16, 512)\n",
+        "    downsample(512, 4), # (bs, 8, 8, 512)\n",
+        "    downsample(512, 4), # (bs, 4, 4, 512)\n",
+        "    downsample(512, 4), # (bs, 2, 2, 512)\n",
+        "    downsample(512, 4), # (bs, 1, 1, 512)\n",
+        "  ]\n",
+        "\n",
+        "  up_stack = [\n",
+        "    upsample(512, 4, apply_dropout=True), # (bs, 2, 2, 1024)\n",
+        "    upsample(512, 4, apply_dropout=True), # (bs, 4, 4, 1024)\n",
+        "    upsample(512, 4, apply_dropout=True), # (bs, 8, 8, 1024)\n",
+        "    upsample(512, 4), # (bs, 16, 16, 1024)\n",
+        "    upsample(256, 4), # (bs, 32, 32, 512)\n",
+        "    upsample(128, 4), # (bs, 64, 64, 256)\n",
+        "    upsample(64, 4), # (bs, 128, 128, 128)\n",
+        "  ]\n",
+        "\n",
+        "  initializer = tf.random_normal_initializer(0., 0.02)\n",
+        "  last = tf.keras.layers.Conv2DTranspose(OUTPUT_CHANNELS, 4,\n",
+        "                                         strides=2,\n",
+        "                                         padding='same',\n",
+        "                                         kernel_initializer=initializer,\n",
+        "                                         activation='tanh') # (bs, 256, 256, 3)\n",
+        "\n",
+        "  concat = tf.keras.layers.Concatenate()\n",
+        "\n",
+        "  inputs = tf.keras.layers.Input(shape=[None,None,3])\n",
+        "  x = inputs\n",
+        "\n",
+        "  # Downsampling through the model\n",
+        "  skips = []\n",
+        "  for down in down_stack:\n",
+        "    x = down(x)\n",
+        "    skips.append(x)\n",
+        "\n",
+        "  skips = reversed(skips[:-1])\n",
+        "\n",
+        "  # Upsampling and establishing the skip connections\n",
+        "  for up, skip in zip(up_stack, skips):\n",
+        "    x = up(x)\n",
+        "    x = concat([x, skip])\n",
+        "\n",
+        "  x = last(x)\n",
+        "\n",
+        "  return tf.keras.Model(inputs=inputs, outputs=x)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8qcC-ODDhBCt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "generator = Generator()\n",
+        "\n",
+        "gen_output = generator(inp[tf.newaxis,...], training=False)\n",
+        "plt.imshow(gen_output[0,...])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MM-RNJyfhC_t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def Discriminator():\n",
+        "  initializer = tf.random_normal_initializer(0., 0.02)\n",
+        "\n",
+        "  inp = tf.keras.layers.Input(shape=[None, None, 3], name='input_image')\n",
+        "  tar = tf.keras.layers.Input(shape=[None, None, 3], name='target_image')\n",
+        "\n",
+        "  x = tf.keras.layers.concatenate([inp, tar]) # (bs, 256, 256, channels*2)\n",
+        "\n",
+        "  down1 = downsample(64, 4, False)(x) # (bs, 128, 128, 64)\n",
+        "  down2 = downsample(128, 4)(down1) # (bs, 64, 64, 128)\n",
+        "  down3 = downsample(256, 4)(down2) # (bs, 32, 32, 256)\n",
+        "\n",
+        "  zero_pad1 = tf.keras.layers.ZeroPadding2D()(down3) # (bs, 34, 34, 256)\n",
+        "  conv = tf.keras.layers.Conv2D(512, 4, strides=1,\n",
+        "                                kernel_initializer=initializer,\n",
+        "                                use_bias=False)(zero_pad1) # (bs, 31, 31, 512)\n",
+        "\n",
+        "  batchnorm1 = tf.keras.layers.BatchNormalization()(conv)\n",
+        "\n",
+        "  leaky_relu = tf.keras.layers.LeakyReLU()(batchnorm1)\n",
+        "\n",
+        "  zero_pad2 = tf.keras.layers.ZeroPadding2D()(leaky_relu) # (bs, 33, 33, 512)\n",
+        "\n",
+        "  last = tf.keras.layers.Conv2D(1, 4, strides=1,\n",
+        "                                kernel_initializer=initializer)(zero_pad2) # (bs, 30, 30, 1)\n",
+        "\n",
+        "  return tf.keras.Model(inputs=[inp, tar], outputs=last)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rm6fu0F0hGKe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "discriminator = Discriminator()\n",
+        "disc_out = discriminator([inp[tf.newaxis,...], gen_output], training=False)\n",
+        "plt.imshow(disc_out[0,...,-1], vmin=-20, vmax=20, cmap='RdBu_r')\n",
+        "plt.colorbar()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IWfefmcnhIfI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "LAMBDA = 100"
       ],
       "execution_count": 0,
       "outputs": []
