--- a/final.ipynb
+++ b/final.ipynb
@@ -490,7 +490,7 @@
         "colab": {}
       },
       "source": [
-        "scaler = transforms.Resize((224, 224))\n",
+        "scaler = transforms.Resize((256, 256))\n",
         "to_tensor = transforms.ToTensor()"
       ],
       "execution_count": 0,
@@ -2681,8 +2681,8 @@
       "source": [
         "BUFFER_SIZE = 400\n",
         "BATCH_SIZE = 32\n",
-        "IMG_WIDTH = 224\n",
-        "IMG_HEIGHT = 224\n",
+        "IMG_WIDTH = 256\n",
+        "IMG_HEIGHT = 256\n",
         "OUTPUT_CHANNELS = 3"
       ],
       "execution_count": 0,
@@ -2754,7 +2754,7 @@
         "colab": {}
       },
       "source": [
-        "@tf.function()\n",
+        "\n",
         "def random_jitter(input_image):\n",
         "  # resizing to 286 x 286 x 3\n",
         "  input_image = resize(input_image, 286, 286)\n",
@@ -2830,20 +2830,20 @@
         "   \n",
         "    \n",
         "    for input_id in batch_paths:\n",
-        "      print(input_id)\n",
+        "      #print(input_id)\n",
         "      \n",
         "      input = load_image_train(input_id)\n",
         "            \n",
         "      batch_input += [input]\n",
         "      \n",
-        "    print(2)\n",
+        "    \n",
         "    batch_x = tf.convert_to_tensor(\n",
         "    batch_input,\n",
         "    dtype=None,\n",
         "    dtype_hint=None,\n",
         "    name=None\n",
         ")\n",
-        "    print(2)\n",
+        "    #print(2)\n",
         "    \n",
         "    \n",
         "    yield (batch_x, batch_x)\n",
@@ -2860,7 +2860,7 @@
         "colab": {}
       },
       "source": [
-        "gen = image_generator(im_paths, 32)"
+        "gen = image_generator(im_paths, 4)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2870,30 +2870,13 @@
       "metadata": {
         "id": "cIiW8eJhm8jU",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 118
-        },
-        "outputId": "0f0f319d-1ca7-41aa-f86f-3dff4c57848c"
+        "colab": {}
       },
       "source": [
         "x,y = next(gen)"
       ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "leftImg8bit/train_extra/heidelberg/heidelberg_000000_000212_leftImg8bit.png\n",
-            "leftImg8bit/train_extra/schweinfurt/schweinfurt_000000_000538_leftImg8bit.png\n",
-            "leftImg8bit/train_extra/duisburg/duisburg_000000_000730_leftImg8bit.png\n",
-            "leftImg8bit/train_extra/heidelberg/heidelberg_000000_000715_leftImg8bit.png\n",
-            "2\n",
-            "2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2904,24 +2887,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a17fd04f-3c09-413f-e84c-d7ee9413e135"
+        "outputId": "37fdd9b4-b127-442b-bdf6-66779c23cdc7"
       },
       "source": [
         "x.shape"
       ],
-      "execution_count": 62,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TensorShape([4, 224, 224, 3])"
+              "TensorShape([4, 256, 256, 3])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 181
         }
       ]
     },
@@ -3035,7 +3018,7 @@
         "\n",
         "  concat = tf.keras.layers.Concatenate()\n",
         "\n",
-        "  inputs = tf.keras.layers.Input(shape=[None,None,3])\n",
+        "  inputs = tf.keras.layers.Input(shape=[256,256,3])\n",
         "  x = inputs\n",
         "\n",
         "  # Downsampling through the model\n",
@@ -3082,8 +3065,8 @@
         "def Discriminator():\n",
         "  initializer = tf.random_normal_initializer(0., 0.02)\n",
         "\n",
-        "  inp = tf.keras.layers.Input(shape=[None, None, 3], name='input_image')\n",
-        "  tar = tf.keras.layers.Input(shape=[None, None, 3], name='target_image')\n",
+        "  inp = tf.keras.layers.Input(shape=[256, 256, 3], name='input_image')\n",
+        "  tar = tf.keras.layers.Input(shape=[256, 256, 3], name='target_image')\n",
         "\n",
         "  x = tf.keras.layers.concatenate([inp, tar]) # (bs, 256, 256, channels*2)\n",
         "\n",
@@ -3118,10 +3101,7 @@
         "colab": {}
       },
       "source": [
-        "discriminator = Discriminator()\n",
-        "disc_out = discriminator([inp[tf.newaxis,...], gen_output], training=False)\n",
-        "plt.imshow(disc_out[0,...,-1], vmin=-20, vmax=20, cmap='RdBu_r')\n",
-        "plt.colorbar()"
+        "discriminator = Discriminator()\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3215,7 +3195,7 @@
         "colab": {}
       },
       "source": [
-        "checkpoint_dir = 'drive/dl_projects/face2facade/training_checkpoints'\n",
+        "checkpoint_dir = \"drive/dl_projects/Video_Genaeration/pix\"\n",
         "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
         "checkpoint = tf.train.Checkpoint(generator_optimizer=generator_optimizer,\n",
         "                                 discriminator_optimizer=discriminator_optimizer,\n",
@@ -3246,7 +3226,7 @@
         "colab": {}
       },
       "source": [
-        "def generate_images(model, test_input, tar):\n",
+        "def generate_images(model, test_input):\n",
         "  # the training=True is intentional here since\n",
         "  # we want the batch statistics while running the model\n",
         "  # on the test dataset. If we use training=False, we will get\n",
@@ -3255,11 +3235,11 @@
         "  prediction = model(test_input, training=True)\n",
         "  plt.figure(figsize=(15,15))\n",
         "\n",
-        "  display_list = [test_input[0], tar[0], prediction[0]]\n",
-        "  title = ['Input Image', 'Ground Truth', 'Predicted Image']\n",
+        "  display_list = [test_input[0], prediction[0]]\n",
+        "  title = ['ground Image',  'Predicted Image']\n",
         "\n",
-        "  for i in range(3):\n",
-        "    plt.subplot(1, 3, i+1)\n",
+        "  for i in range(2):\n",
+        "    plt.subplot(1, 2, i+1)\n",
         "    plt.title(title[i])\n",
         "    # getting the pixel values between [0, 1] to plot it.\n",
         "    plt.imshow(display_list[i] * 0.5 + 0.5)\n",
@@ -3277,7 +3257,7 @@
         "colab": {}
       },
       "source": [
-        "@tf.function\n",
+        "\n",
         "def train_step(input_image, target):\n",
         "  with tf.GradientTape() as gen_tape, tf.GradientTape() as disc_tape:\n",
         "    gen_output = generator(input_image, training=True)\n",
@@ -3304,21 +3284,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bDzge0c_uffA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "import time"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "UjkG4WQchXyz",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "def train(dataset, epochs):\n",
+        "  print(1)\n",
         "  for epoch in range(epochs):\n",
         "    start = time.time()\n",
         "\n",
-        "    for input_image, target in dataset:\n",
-        "      train_step(input_image, target)\n",
+        "    input_image , target = next(dataset)\n",
+        "    train_step(input_image, target)\n",
         "\n",
-        "    clear_output(wait=True)\n",
-        "    for inp, tar in test_dataset.take(1):\n",
-        "      generate_images(generator, inp, tar)\n",
+        "    \n",
         "\n",
         "    # saving (checkpoint) the model every 20 epochs\n",
         "    if (epoch + 1) % 20 == 0:\n",
@@ -3333,15 +3326,75 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1obMOTociHnn",
+        "id": "YhfD2V7mtfRw",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "train(train_dataset, EPOCHS)"
+        "\n",
+        "gen = image_generator(im_paths, 4)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KN3I3QtTvOOU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "938d197f-ffd8-4233-8573-dc654b61830e"
+      },
+      "source": [
+        "x,y=(next(gen))\n",
+        "x.shape"
+      ],
+      "execution_count": 200,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([4, 256, 256, 3])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 200
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1obMOTociHnn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "57e534c0-76b6-44d9-ebc8-bd2cdd1625b8"
+      },
+      "source": [
+        "EPOCHS = 200\n",
+        "train((gen), EPOCHS)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "Time taken for epoch 1 is 12.370551347732544 sec\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
